Finished UI for game
Game fully working with all new features and UI

--- a/index.html
+++ b/index.html
@@ -5,6 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    <button id="btnRock">Rock</button>
+    <button id="btnPaper">Paper</button>
+    <button id="btnScisor">Scisor</button>
+    <div id="display"></div>
+    <div id="scoreH"></div>
+    <div id="scoreM"></div>
+    <div id="result">test</div>
+  </body>
   <script src="script.js"></script>
 </html>
