--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="display"></div>
     <div id="scoreH"></div>
     <div id="scoreM"></div>
-    <div id="result">test</div>
+    <div id="result"></div>
   </body>
   <script src="script.js"></script>
 </html>
